@@ -1,3 +1,6 @@
+2008-03-30  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview.c: fix compiler warning.
 
 === gtksourceview 2.2.0 ===
 
